// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should support maxLength 1`] = `
<Input
  disabled={false}
  maxLength="3"
  prefixCls="wmstool-input"
  type="text"
>
  <input
    className="wmstool-input"
    disabled={false}
    maxLength="3"
    onKeyDown={[Function]}
    type="text"
  />
</Input>
`;

exports[`Input.Search should support suffix 1`] = `
<Search
  enterButton={false}
  inputPrefixCls="wmstool-input"
  prefixCls="wmstool-input-search"
  suffix="suffix"
>
  <Input
    className="wmstool-input-search"
    disabled={false}
    onPressEnter={[Function]}
    prefixCls="wmstool-input"
    suffix={
      Array [
        "suffix",
        <Icon
          className="wmstool-input-search-icon"
          type="search"
        />,
      ]
    }
    type="text"
  >
    <span
      className="wmstool-input-search wmstool-input-affix-wrapper"
    >
      <input
        className="wmstool-input"
        disabled={false}
        onKeyDown={[Function]}
        style={null}
        type="text"
      />
      <span
        className="wmstool-input-suffix"
      >
        suffix
        <Icon
          className="wmstool-input-search-icon"
          key="searchIcon"
          type="search"
        >
          <i
            className="anticon anticon-search wmstool-input-search-icon"
          />
        </Icon>
      </span>
    </span>
  </Input>
</Search>
`;

exports[`TextArea should support disabled 1`] = `
<TextArea
  disabled={true}
  prefixCls="wmstool-input"
>
  <textarea
    className="wmstool-input wmstool-input-disabled"
    disabled={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
  />
</TextArea>
`;

exports[`TextArea should support maxLength 1`] = `
<TextArea
  maxLength="10"
  prefixCls="wmstool-input"
>
  <textarea
    className="wmstool-input"
    maxLength="10"
    onChange={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
  />
</TextArea>
`;
